deploy/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kitchensink-bot
  name: kitchensink-bot
  namespace: kitchensink-bot
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: kitchensink-bot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kitchensink-bot
    app.openshift.io/runtime: python
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: 'main'
    app.openshift.io/vcs-uri: 'https://github.com/atarazana/kitchensink-bot'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"kitchensink-bot:latest","namespace":"kitchensink-bot"},"fieldPath":"spec.template.spec.containers[?(@.name==\"kitchensink-bot\")].image","pause":"false"}]
  name: kitchensink-bot
  namespace: kitchensink-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchensink-bot
  template:
    metadata:
      labels:
        app: kitchensink-bot
    spec:
      serviceAccountName: kitchensink-bot
      volumes:
        - name: kitchensink-bot-db-pvc
          persistentVolumeClaim:
            claimName: kitchensink-bot-db-pvc
        - name: data-secret-volume
          secret:
            secretName: kitchensink-bot-data
      containers:
      - name: kitchensink-bot
        # image: quay.io/atarazana/kitchensink-bot:1.0.0
        image: image-registry.openshift-image-registry.svc:5000/kitchensink-bot/kitchensink-bot:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '500m'
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: kitchensink-bot-db-pvc
          mountPath: /db
        - name: data-secret-volume
          mountPath: /data
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          capabilities:
            drop:
              - ALL
          allowPrivilegeEscalation: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kitchensink-bot
  name: kitchensink-bot
  namespace: kitchensink-bot
spec:
  to:
    kind: Service
    name: kitchensink-bot
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
